--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 .DS_store
 # Eliminamos la carpeta del venv ya que pesa mucho y solo tenemos que instalarnos todo lo escrito en 'requierements.txt'
 .python-venv/
+# Eliminamos el fichero .env donde tenemos el fichero con las KEYS de las API
+.env
