--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@
 .env
 # Eliminamos el directorio .vscode/ donde tenemos toda la configuración de nuestor editor de texto
 .vscode/
+# Eliminamos ficheros y carpetas molestas de las librerías que estoy usando
+cache/
+exports/
+pandasai.log
