change to python version 3.9.6 -CHANGE --PYTHON-VERSION

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # Eliminamos la carpeta del venv ya que pesa mucho y solo tenemos que instalarnos todo lo escrito en 'requierements.txt'
 .python-venv/
 # Eliminamos el fichero .env donde tenemos el fichero con las KEYS de las API
-.env
+.env-token
 # Eliminamos el directorio .vscode/ donde tenemos toda la configuración de nuestor editor de texto
 .vscode/
 # Eliminamos ficheros y carpetas molestas de las librerías que estoy usando
