repo reorganization, change to python3.9.6 and steps for chatbot using pandasai -WORK --CONTROL-COMMIT

--- a/requirements-3_9_6.txt
+++ b/requirements-3_9_6.txt
@@ -5,40 +5,53 @@ appnope==0.1.4
 astor==0.8.1
 asttokens==2.4.1
 astunparse==1.6.3
+build==1.2.1
+CacheControl==0.14.0
 certifi==2024.2.2
+cffi==1.16.0
 charset-normalizer==3.3.2
+cleo==2.1.0
 comm==0.2.2
 contourpy==1.2.1
+crashtest==0.4.1
 cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
+distlib==0.3.8
 distro==1.9.0
 duckdb==0.10.2
-exceptiongroup==1.2.0
+dulwich==0.21.7
+einops==0.8.0
+exceptiongroup==1.2.1
 executing==2.0.1
 Faker==19.13.0
-filelock==3.13.4
+fastjsonschema==2.19.1
+filelock==3.14.0
 flatbuffers==24.3.25
 fonttools==4.51.0
 fsspec==2024.3.1
 gast==0.5.4
 google-pasta==0.2.0
 greenlet==3.0.3
-grpcio==1.62.2
+grpcio==1.63.0
 h11==0.14.0
 h5py==3.11.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
 importlib_metadata==7.1.0
+importlib_resources==6.4.0
+installer==0.7.0
 ipykernel==6.29.4
 ipython==8.18.1
+jaraco.classes==3.4.0
 jedi==0.19.1
 Jinja2==3.1.3
 joblib==1.4.0
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 keras==3.3.3
+keyring==24.3.1
 kiwisolver==1.4.5
 libclang==18.1.1
 Markdown==3.6
@@ -48,12 +61,14 @@ matplotlib==3.8.4
 matplotlib-inline==0.1.7
 mdurl==0.1.2
 ml-dtypes==0.3.2
+more-itertools==10.2.0
 mpmath==1.3.0
+msgpack==1.0.8
 namex==0.0.8
 nest-asyncio==1.6.0
 networkx==3.2.1
 numpy==1.26.4
-openai==1.23.6
+openai==1.25.0
 opt-einsum==3.3.0
 optree==0.11.0
 packaging==24.0
@@ -62,16 +77,20 @@ pandasai==2.0.36
 parso==0.8.4
 pexpect==4.9.0
 pillow==10.3.0
-platformdirs==4.2.0
+pkginfo==1.10.0
+platformdirs==4.2.1
+poetry==1.8.2
+poetry-core==1.9.0
+poetry-plugin-export==1.7.1
 prompt-toolkit==3.0.43
 protobuf==4.25.3
 psutil==5.9.8
 ptyprocess==0.7.0
 pure-eval==0.2.2
 PyAudio==0.2.14
+pycparser==2.22
 pydantic==2.7.1
 pydantic_core==2.18.2
-pydicom==2.4.4
 Pygments==2.17.2
 pyobjc==10.2
 pyobjc-core==10.2
@@ -92,10 +111,12 @@ pyobjc-framework-AVFoundation==10.2
 pyobjc-framework-AVKit==10.2
 pyobjc-framework-AVRouting==10.2
 pyobjc-framework-BackgroundAssets==10.2
+pyobjc-framework-BrowserEngineKit==10.2
 pyobjc-framework-BusinessChat==10.2
 pyobjc-framework-CalendarStore==10.2
 pyobjc-framework-CallKit==10.2
 pyobjc-framework-CFNetwork==10.2
+pyobjc-framework-Cinematic==10.2
 pyobjc-framework-ClassKit==10.2
 pyobjc-framework-CloudKit==10.2
 pyobjc-framework-Cocoa==10.2
@@ -202,6 +223,7 @@ pyobjc-framework-SearchKit==10.2
 pyobjc-framework-Security==10.2
 pyobjc-framework-SecurityFoundation==10.2
 pyobjc-framework-SecurityInterface==10.2
+pyobjc-framework-SensitiveContentAnalysis==10.2
 pyobjc-framework-ServiceManagement==10.2
 pyobjc-framework-SharedWithYou==10.2
 pyobjc-framework-SharedWithYouCore==10.2
@@ -211,6 +233,7 @@ pyobjc-framework-SoundAnalysis==10.2
 pyobjc-framework-Speech==10.2
 pyobjc-framework-SpriteKit==10.2
 pyobjc-framework-StoreKit==10.2
+pyobjc-framework-Symbols==10.2
 pyobjc-framework-SyncServices==10.2
 pyobjc-framework-SystemConfiguration==10.2
 pyobjc-framework-SystemExtensions==10.2
@@ -224,41 +247,49 @@ pyobjc-framework-Virtualization==10.2
 pyobjc-framework-Vision==10.2
 pyobjc-framework-WebKit==10.2
 pyparsing==3.1.2
+pyproject_hooks==1.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pyttsx3==2.90
 pytz==2024.1
 PyYAML==6.0.1
-pyzmq==26.0.0
+pyzmq==26.0.3
+rapidfuzz==3.8.1
 requests==2.31.0
+requests-toolbelt==1.0.0
 rich==13.7.1
 scikit-learn==1.4.2
 scipy==1.13.0
-seaborn==0.13.2
-setuptools==69.5.1
+shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
 SpeechRecognition==3.10.3
 SQLAlchemy==2.0.29
 stack-data==0.6.3
 sympy==1.12
-tabtransformertf==0.0.8
+tab-transformer-pytorch==0.3.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
-threadpoolctl==3.4.0
+threadpoolctl==3.5.0
+tomli==2.0.1
+tomlkit==0.12.4
 torch==2.2.2
 torchaudio==2.2.2
 torchvision==0.17.2
 tornado==6.4
 tqdm==4.66.2
-traitlets==5.14.2
+traitlets==5.14.3
+trove-classifiers==2024.4.10
 typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
+virtualenv==20.26.1
 wcwidth==0.2.13
+webrtcvad==2.0.10
 Werkzeug==3.0.2
-wheel==0.43.0
 wrapt==1.16.0
+xattr==1.1.0
 zipp==3.18.1
