--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Eliminamos los ficheros que genera MAC al hacer commit
-.DS_store
+# Eliminamos los ficheros que genera MAC al mover las carpetas
+.DS_Store
 # Eliminamos la carpeta del venv ya que pesa mucho y solo tenemos que instalarnos todo lo escrito en 'requierements.txt'
 .python-venv/
 .aide-venv/
